Version 0.4.0-alpha [2005-XXX-XX] - Jesper Veggerby <pear.nosey@veggerby.dk>
    * Added support for antialiasing images when using GD (both using native GD method and Image_Graph own implementation)
    * Added possibility to specify horizontal title alignment (left, right or center)
    * Fixed an "off-by-one" problem with secondary axis
    * Included all on-line examples in package

Version 0.3.0-alpha [2005-Feb-25] - Jesper Veggerby <pear.nosey@veggerby.dk>
    * Added possibility to use arrays of the type $data[$id] = array('x' => $x, 'y' => $y) for easy data addition to a dataset
    * Added use of 'null' y-values in line plots (normal and smoothed) causing a break in the line (instead of dropping to zero)
    * Added possibility to make one legend use multiple plotareas
    * Added grouping to drivers (currently only fully supported by SVG driver)
    * Added axis padding (padding inside the plotarea)
    * Added Image_Graph_Axis::setFixedSize() to allow for alignment of axis on different plotareas when in a layout
    * Added possibility to use padding with overlayed legends to make legend _not_ display fx. on-top of y-axis
    * Added/improved support for multi line text using GD drivers
    * Added support for antialiasing images when using GD (GD built in method)
    * Implemented simple shadows (and removed shadow images from distribution)
    * Fixed bug #3346 "double as data"
    * Fixed a problem with normal multi-data bar charts not displaying expected bar width
    * Fixed problem with legends when overlayed    
    * Fixed axis not displaying labels after resetting driver
    * Fixed problem in SVG driver with vertical texts
    * Fixed a problem with line axis marker on a secondary y-axis displaying vertically instead of horizontally
    * Fixed problem with logarithmic axis not scaling properly
    * Changed the way coordinates are calculated when adding titles to non-layout objects
    * Changed which changes API causing minor BC breaks