@@ -840,5 +840,5 @@ class Image_Graph extends Image_Graph_Element
 // General to-do's
 // TODO Create bar-chart-type where bar have individual widths (i.e. in the dataset fx).
 // TODO Update private tags to protected wherever necessary
-//  
+// TODO Create a simple table element
 ?>
