@@ -53,6 +53,8 @@ require_once 'Image/Graph/Layout.php';
  */
 class Image_Graph_Legend extends Image_Graph_Layout
 {
+    
+    // TODO Possibility to wrap legend titles
 
     /**
      * Alignment of the text
